# ECE4600-G13

./: Gesture Translation Emulation Program  Glove.cpp  Glove.h  Modified Glove.h for Emulation  README.md  main.c
BaseDocker/: Dockerfile  README.md  run_setup.sh  start_container.sh
BaseDocker/gesture_node_pkg/: CMakeLists.txt  package.xml
BaseDocker/gesture_node_pkg/src/: Glove.cpp  Glove.h  gesture_node.cpp
FlexSensing/: .cproject  .project  FlexSensing Debug.launch  FlexSensing.ioc
FlexSensing/Core/Src/: main.c  stm32f4xx_hal_msp.c
Flight_Controller/: .project
UART_Test_Program/: .cproject  .mxproject  .project  UART_Test_Program Debug.launch  UART_Test_Program.ioc
UART_Test_Program/Core/Inc/: stm32f4xx_hal_conf.h
UART_Test_Program/Core/Src/: main.c  stm32f4xx_hal_msp.c
esp32-test-code/: esp32_base.cpp  esp32_drone.cpp  esp32_publisher  esp32_subscriber.cpp  esp32_test_subscriber_multiarray  esp32_wifi.cpp  esp32_wifi_test.cpp
gesture_node_pkg/: CMakeLists.txt
gesture_node_pkg/msg/: Gesture.msg
glove_sensor/: CMakeLists.txt  README.md
glove_sensor/src/: handSensor.code-workspace  main.cpp
pid_test/: main.c  pid_test.ino  py_test_flightPID.py  py_test_movement.py
robots/: Drone  RC_Car
